--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,5 @@
-App_Data
-App_Data/*
-Version/Beta_12.0/extjs/Cache
-Version/Beta_12.0/extjs/Cache/*
-Version/Beta_12.6/extjs/Cache
-Version/Beta_12.6/extjs/Cache/*
+extjs/cache
+extjs/cache/*
 
 #########################################
 # https://gist.github.com/octocat/9257657
